[package]
name = "to-polite"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-igo = { git = "https://github.com/statiolake/typed-igo-rs" }
conjugation = { git = "https://github.com/statiolake/conjugation-rs" }
scopefunc = "0.1.0"

[dev-dependencies]
lazy_static = "1.4.0"
